Stubs the culture module and tests
Expresses the basis for the module loader main

Signed-off-by: Christopher Rogers <chrissrogers@gmail.com>

--- a/package.json
+++ b/package.json
@@ -12,6 +12,13 @@
     "type": "git",
     "url": "https://github.com/chrissrogers/culture.git"
   },
+  "dependencies": {
+    "lodash": "1.x",
+    "q":      "~0.8"
+  },
+  "devDependencies": {
+    "should": "1.x"
+  },
   "keywords": [
     "distributed",
     "zeromq",
